
2009-05-04 (dazjorz)
 * Added resetting all Smarty caches in the upgrade script.

2009-04-29 (dazjorz)
 * Fixed remaining magic_quotes_gpc workarounds and removed
 fix_magic_quotes.php inclusion.
 * Made options.tpl display both the message and the icon using the 'message'
 modifier.
 * The locale cell is now further away from the type cell on the settings
 page, "all other locales" is above all locales and there's a <hr/> dividing "all
 others" and the list of locales.
 * Removed the subBar() function from functions.inc.php.
 * Made the code in view.php a little more clear.

2009-04-28 (dazjorz)
 * Fixed stats.php to make a list of all types, sorted by the order as
 returned by validTypes, without leaving types out.
 * Added to stats.php to do the same with statuses.
 * Added to stats.php to get the number of developers and developers with
 e-mail address set.
 * Added a nice Smarty template for stats.php so the page looks a lot better.
 * Added stats.php to lbinfo in lbheader.tpl.
 * Added a little notice on simply replying to devremark.tpl.
 * Added LIKEBACK_VERSION (as lbversion) as an assigned variable to Smarty
 * Added (unused) db_fetch_array and db_fetchAllArray to db.php

2009-04-27 (dazjorz)
 * Added a simple e-mail gateway application which doesn't really change
 anything yet, just parses the e-mail.
 * Fixed a bug in view.php and options.php where the scripts would die if
 tables were empty.
 * Added a sectionelse to viewfilters.tpl if there are no known locales.
 * Added a sectionelse to commenttable.tpl to say "no comments could be
 found".
 * Made db.php output a warning if a query failed, if LIKEBACK_PRODUCTION
 isn't enabled.

2009-04-27 (valerio)
 * Gave the header an overhaul.

2009-04-26 (dazjorz)
 * When a developer changes status through newRemark, the e-mail now displays
 the real message for that status (messageForStatus).
 * The select box on the newRemark form now displays the real messages for
 the statuses.