@@ -42,5 +42,8 @@
   // The logo URL for this project
   define( "LIKEBACK_APP_LOGO", "http://example.org/icons/logo.png" );
 
+  // The URL to LikeBack (without 'admin/', but it should exist after this link!)
+  define( "LIKEBACK_URL", "http://example.org/likeback" );
+
   // Don't change this:
   define( "LIKEBACK_VERSION", "1.2-svn" );
